Added skeleton structure for form, logo banner and image attribution.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
             <!-- <img src="./assets/fern-img.jpg" alt="Image of a lush green fern."> -->
             <div class="logo-banner">
                 <!-- Make this section positioned relatively to the image underneath it. -->
+                 <img src="./assets/odin-lined.png" alt="Outline of the Odin Project logo.">
+                 <h2>ODIN</h2>
             </div>
+            <p>Photo by <a href="https://unsplash.com/@haliewestphoto" target="_blank">Halie West</a> on Unsplash.</p>
         </div>
         <div class="signup-side">
             <form>
