--- a/index.html
+++ b/index.html
@@ -18,7 +18,40 @@
             <p>Photo by <a href="https://unsplash.com/@haliewestphoto" target="_blank">Halie West</a> on Unsplash.</p>
         </div>
         <div class="signup-side">
+            <h2>Let's do this!</h2>
+
             <form>
+                <div class="form-panel">
+                    <div class="form-col">
+                        <div class="form-group">
+                            <label for="">First Name</label>
+                            <input type="text">
+                        </div>
+                        <div class="form-group">
+                            <label for="">Email</label>
+                            <input type="text">
+                        </div>
+                        <div class="form-group">
+                            <label for="">Password</label>
+                            <input type="text"></input>
+                        </div>
+                    </div>
+                    <div class="form-col">
+                        <div class="form-group">
+                            <label for="">Last Name</label>
+                            <input type="text">
+                        </div>
+                        <div class="form-group">
+                            <label for="">Phone Number</label>
+                            <input type="text">
+                        </div>
+                        <div class="form-group">
+                            <label for="">Confirm Password</label>
+                            <input type="text"></input>
+                        </div>
+                    </div>
+                </div>
+                <button type="submit">Create Account</button>
             </form>
             <p>
                 Already have an account? <a href="">Log in.</a>
