Completed focus behaviour on text inputs. Outline is removed on focus

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
+    <link rel="preconnect" href="https://fonts.bunny.net">
+    <link href="https://fonts.bunny.net/css?family=anuphan:400" rel="stylesheet" />
     <title>Document</title>
 </head>
 <body>
@@ -18,36 +20,44 @@
             <p>Photo by <a href="https://unsplash.com/@haliewestphoto" target="_blank">Halie West</a> on Unsplash.</p>
         </div>
         <div class="signup-side">
-            <h2>Let's do this!</h2>
+            
+            <p>
+                This is not a real online service! You know you need something like this in your life to help
+                you realize your deepest dreams. Sign up <em>now</em> to get started.
+            </p>
+            <p>
+                You <em>know</em> you want to.
+            </p>
 
             <form>
+                <h2>Let's do this!</h2>
                 <div class="form-panel">
                     <div class="form-col">
                         <div class="form-group">
-                            <label for="">First Name</label>
-                            <input type="text">
+                            <label for="first_name">First Name</label>
+                            <input type="text" name="first_name" id="first_name">
                         </div>
                         <div class="form-group">
-                            <label for="">Email</label>
-                            <input type="text">
+                            <label for="email">Email</label>
+                            <input type="text" name="email" id="email">
                         </div>
                         <div class="form-group">
-                            <label for="">Password</label>
-                            <input type="text"></input>
+                            <label for="password">Password</label>
+                            <input type="text" name="password" id="password">
                         </div>
                     </div>
                     <div class="form-col">
                         <div class="form-group">
-                            <label for="">Last Name</label>
-                            <input type="text">
+                            <label for="last_name">Last Name</label>
+                            <input type="text" name="last_name" id="last_name">
                         </div>
                         <div class="form-group">
-                            <label for="">Phone Number</label>
-                            <input type="text">
+                            <label for="phone_number">Phone Number</label>
+                            <input type="text" name="phone_number" id="phone_number">
                         </div>
                         <div class="form-group">
-                            <label for="">Confirm Password</label>
-                            <input type="text"></input>
+                            <label for="conf_password">Confirm Password</label>
+                            <input type="text" name="conf_password" id="conf_password">
                         </div>
                     </div>
                 </div>
