--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./modern-normalized.css">
     <link rel="stylesheet" href="./styles.css">
     <link rel="preconnect" href="https://fonts.bunny.net">
     <link href="https://fonts.bunny.net/css?family=anuphan:400" rel="stylesheet" />
@@ -17,51 +18,51 @@
                  <img src="./assets/odin-lined.png" alt="Outline of the Odin Project logo.">
                  <h2>ODIN</h2>
             </div>
-            <p>Photo by <a href="https://unsplash.com/@haliewestphoto" target="_blank">Halie West</a> on Unsplash.</p>
+            <p>Photo by <a href="https://unsplash.com/@haliewestphoto" target="_blank">Halie West</a> on <a href="https://unsplash.com/" target="_blank">Unsplash</a>.</p>
         </div>
         <div class="signup-side">
             
-            <p>
+            <p id="description">
                 This is not a real online service! You know you need something like this in your life to help
                 you realize your deepest dreams. Sign up <em>now</em> to get started.
             </p>
-            <p>
+            <p id="egg-on">
                 You <em>know</em> you want to.
             </p>
 
             <form>
-                <h2>Let's do this!</h2>
+                <h2 id="call-to-action">Let's do this!</h2>
                 <div class="form-panel">
                     <div class="form-col">
                         <div class="form-group">
-                            <label for="first_name">First Name</label>
-                            <input type="text" name="first_name" id="first_name">
+                            <label for="first_name">FIRST NAME</label>
+                            <input type="text" name="first_name" id="first_name" required>
                         </div>
                         <div class="form-group">
-                            <label for="email">Email</label>
-                            <input type="text" name="email" id="email">
+                            <label for="email">EMAIL</label>
+                            <input type="text" name="email" id="email" required>
                         </div>
                         <div class="form-group">
-                            <label for="password">Password</label>
-                            <input type="text" name="password" id="password">
+                            <label for="password">PASSWORD</label>
+                            <input type="text" name="password" id="password" required>
                         </div>
                     </div>
                     <div class="form-col">
                         <div class="form-group">
-                            <label for="last_name">Last Name</label>
-                            <input type="text" name="last_name" id="last_name">
+                            <label for="last_name">LAST NAME</label>
+                            <input type="text" name="last_name" id="last_name" required>
                         </div>
                         <div class="form-group">
-                            <label for="phone_number">Phone Number</label>
-                            <input type="text" name="phone_number" id="phone_number">
+                            <label for="phone_number">PHONE NUMBER</label>
+                            <input type="text" name="phone_number" id="phone_number" required>
                         </div>
                         <div class="form-group">
-                            <label for="conf_password">Confirm Password</label>
-                            <input type="text" name="conf_password" id="conf_password">
+                            <label for="conf_password">CONFIRM PASSWORD</label>
+                            <input type="text" name="conf_password" id="conf_password" required>
                         </div>
                     </div>
                 </div>
-                <button type="submit">Create Account</button>
+                <button type="submit" class="submit-btn">Create Account</button>
             </form>
             <p>
                 Already have an account? <a href="">Log in.</a>
